Added some comments and Directions

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Add Some colors using Hex Values here -->
     
-    <color name="color_Dark_Grey">#999999</color>
+    <color name="color_Dark_Grey">#D9D9D9</color>
     <color name="color_Orange">#FF6A19</color>
-    <color name="color_Aqua">#00FFF6</color>
+    <color name="color_Aqua">#1DA6B2</color>
 </resources>
