--- a/res/layout/simple_object_item.xml
+++ b/res/layout/simple_object_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
     <TextView
         android:id="@+id/txtProductName"
+        android:textColor="@color/color_Aqua"
         android:textSize="@dimen/text_Size_Product_Name"
         android:padding="@dimen/text_Padding_Product_Item"
         android:text="@string/text_Product_Name"
@@ -12,10 +13,11 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/txtProductPrice"
+        android:textColor="@color/color_Orange"
         android:textSize="@dimen/text_Size_Product_Price"
         android:padding="@dimen/text_Padding_Product_Item"
         android:text="@string/text_Product_Price"
-        android:layout_below="@+id/txtProductName"
+        android:layout_toRightOf="@+id/txtProductName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <ImageView
