--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,11 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.actionbarsherlockdemo.MainActivity" >
 
+    <!-- This is one item but this is how you create them. Pretty Simple -->
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:showAsAction="ifRoom"
         android:title="@string/action_settings"/>
 
 </menu>
+
